WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279143
ASSERT in WebCore::RenderLayerCompositor::traverseUnchangedSubtree - provider == backingSharingState.backingProviderCandidateForLayer(layer, *this, overlapMap, layerExtent)
https://bugs.webkit.org/show_bug.cgi?id=279143
Summary
ASSERT in WebCore::RenderLayerCompositor::traverseUnchangedSubtree - provider...
Matt Woodrow
Reported
2024-09-04 14:03:12 PDT
<
rdar://135189928
>
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-09-04 14:08:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33139
EWS
Comment 2
2024-09-04 18:01:17 PDT
Committed
283182@main
(ff9c149d15da): <
https://commits.webkit.org/283182@main
> Reviewed commits have been landed. Closing PR #33139 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug