ASSERT in WebCore::RenderLayerCompositor::traverseUnchangedSubtree - provider == backingSharingState.backingProviderCandidateForLayer(layer, *this, overlapMap, layerExtent). https://bugs.webkit.org/show_bug.cgi?id=279143 <rdar://135189928>

Reviewed by Simon Fraser.

This case has a backing sharing provider, and a shared layer with a sibling in
the middle.

The sibling has a reference filter (overlapBoundsIncludeChildren() == true) and
is initially not composited. This results in the computed overlap bounds being
that of it's clipped ancestor, which may not intersect the backing sharing
provider.

If the sibling becomes composited during this compositing update, the on the
next update it will use a different clip (from itself only) and now overlap the
backing sharing provider. Nothing marks the shared layer as needing an update,
so it detects that it can't share due to overlap during the
traverseUnchangedSubtree path and asserts.

Fix this by adding a flag to the clip rect calculation that makes it not
depending on prior compositing decisions.

* LayoutTests/compositing/shared-backing/overlap-bounds-change-crash-expected.txt: Added.
* LayoutTests/compositing/shared-backing/overlap-bounds-change-crash.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayer.h:

Canonical link: https://commits.webkit.org/283182@main